Add simple generate token, validator setup
