# models/users.js
@@ -1,45 +1,0 @@
-import _sequelize from 'sequelize';
-const { Model, Sequelize } = _sequelize;
-
-export default class users extends Model {
-  static init(sequelize, DataTypes) {
-  return super.init({
-    id: {
-      autoIncrement: true,
-      type: DataTypes.INTEGER,
-      allowNull: false,
-      primaryKey: true
-    },
-    username: {
-      type: DataTypes.STRING(50),
-      allowNull: false,
-      unique: "users_username_key"
-    },
-    password: {
-      type: DataTypes.STRING(255),
-      allowNull: false
-    }
-  }, {
-    sequelize,
-    tableName: 'users',
-    schema: 'public',
-    timestamps: false,
-    indexes: [
-      {
-        name: "users_pkey",
-        unique: true,
-        fields: [
-          { name: "id" },
-        ]
-      },
-      {
-        name: "users_username_key",
-        unique: true,
-        fields: [
-          { name: "username" },
-        ]
-      },
-    ]
-  });
-  }
-}
